# LEZEA_MLOPS1

./: .gitignore  README.md  demo_for_boss.py  pyproject.toml  requirements.txt  test_connections.py
demo_artifacts/: EXEC_SUMMARY.json
demo_artifacts/business/: business_summary.json
demo_artifacts/monitoring/: system_status.json
demo_artifacts/params/: params.json
demo_artifacts/report/: access_urls.json
demo_artifacts/results/: integration_readiness.json  performance_summary.json
demo_artifacts/training/: history.json
docs/: connector_spec.md  mlops_spec_coverage.md
examples/: README.md  full_training.py  quick.start.py  quick_start.py
lezea_mlops/: __init__.py  connector.py  tracker.py
lezea_mlops/backends/: __init__.py  dvc_backend.py  mlflow_backend.py  mongodb_backend.py  postgres_backend.py  s3_backend.py
lezea_mlops/business/: cost_model.py
lezea_mlops/config/: __init__.py  paths.yml  services.yml
lezea_mlops/modification/: trees.py  tress.py
lezea_mlops/monitoring/: __init__.py  data_usage.py  env_tags.py  gpu_monitor.py  prom_metrics.py  resource_logger.py
lezea_mlops/utils/: __init__.py  logging.py  plots.py  validation.py
mlflow_runs/0/: meta.yaml
mlflow_runs/508508901423133317/: meta.yaml
scripts/: export_grafana.py  health_check.py  setup_dev_env.py  smoke_test.py  start_all.sh  stop_all.sh
services/mlflow/: README.md  start.sh
services/postgres/: README.md  init.sql
services/prometheus/: README.md  alerts.yml  prometheus.yml
