[project]
name = "lezea-mlops"
version = "0.1.0"
description = "MLOps tracking for LeZeA"
authors = [{name="Your Name"}]
requires-python = ">=3.10"
dependencies = [
  "mlflow>=2.9,<2.13",
  "pymongo>=4.6",
  "boto3>=1.28",
  "prometheus-client>=0.20",
  "psutil>=5.9",
  "pynvml>=11.5",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "pydantic>=2.6",
  "requests>=2.31",
  "structlog>=24.1",
  "matplotlib>=3.8",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=24.4", "ruff>=0.5", "mypy>=1.10"]
