[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lezea-mlops"
version = "0.1.0"
description = "LeZeA MLOps utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
# use “find” discovery in current directory

[tool.setuptools.packages.find]
where = ["."]
include = ["lezea_mlops*"]
exclude = [
  "tests*", "examples*", "scripts*",
  "viz*", "temp*", "logs*", "data*", "cache*",
  "exports*", "services*", "artifacts*", "checkpoints*"
]
